Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16085

Ubuntu 22.04 sanityn test_106c: supported stx_attributes: got '2030', expected '30'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0, Lustre 2.15.2
    • Lustre 2.15.1
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/d93ea6cd-9f2e-4488-84c9-da7169aaac3c

      test_106c failed with the following error:

      supported stx_attributes: got '2030', expected '30'
      

      It is similar as LU-13628 but this is with Ubuntu2204 client

      == sanityn test 106c: Verify statx attributes mask ======= 11:30:40 (1660044640)
       sanityn test_106c: @@@@@@ FAIL: supported stx_attributes: got '2030', expected '30' 
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanityn test_106c - supported stx_attributes: got '2030', expected '30'

            sebastien Sebastien Buisson
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: