lustre/llite/file.c
@@ -5367,6 +5367,9 @@ fill_attr:
 	}
 
 	stat->attributes_mask = STATX_ATTR_IMMUTABLE | STATX_ATTR_APPEND;
+#ifdef HAVE_LUSTRE_CRYPTO
+	stat->attributes_mask |= STATX_ATTR_ENCRYPTED;
+#endif
 	stat->attributes |= ll_inode_to_ext_flags(inode->i_flags);
 	stat->result_mask &= request_mask;
 #endif
